# Watercolor

./: .create_coords.py  .gitignore  .pre-commit-config.yaml  Dockerfile  actions.py  atspi-client.py  atspi_log.txt  dumptree.js  index.ts  main.c  main.ts  makefile  package-lock.json  package.json  pyproject.toml  readme.md  renderer.py  test.py  tsconfig.json  vite.config.js  watercolor-settings.talon  watercolor-settings.talon.example  watercolor.talon
.atspi-server/: Dockerfile  __init__.py  api_server.py  create_coords.py  custom_types.py  lib.py  logger.py  main.py  server.py  test.py  types.py
.atspi-server/tests/: test_lib.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ISSUE_TEMPLATE.md  ci.yml
.tests/: test_canvas.py  test_client.py  test_lib.py  test_listeners.py  test_server.py
atspi-server/: .test.py
client/: actions.py  atspi-client.py  atspi_client.py  client_types.py  renderer.py  types.py
docs/: app-wiki.md  index.html  main.js  styles.css  watercolor.html
shared/: config.py  shared_types.py  types.py
src/: cat.sh  main.ts
tests/: test_lib.py
