
[project]
name = "Watercolor"
version = "0.0.1"
description = "Add labels for your Linux desktop a11y elements"
license = { file = 'LICENSE' }
authors = [
    { name = "Colton Loftus", email = "c-loftus@users.noreply.github.com" },
]
readme = "README.md"
keywords = ["talon", "atspi", "accessibility", "a11y"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = 'black'

[tool.pyright]
# Talon classes don't use self so ignore the associated errors
reportSelfClsParameterName = false
reportGeneralTypeIssues = false
# Imgui functions return an object that can't be statically resolved
reportFunctionMemberAccess = false
# Talon can't be installed in CI so ignore source errors
reportMissingModuleSource = false
reportMissingImports = false


[tool.ruff.lint]
# Allow imports in the form import gi
# gi.require_version("Atspi", "2.0")
# from gi.repository import Atspi
ignore = ["E402"]
